RESOLVED FIXED95422
Fix compile warning when enable tiled backing store
https://bugs.webkit.org/show_bug.cgi?id=95422
Summary Fix compile warning when enable tiled backing store
Kangil Han
Reported 2012-08-29 22:53:33 PDT
There are some compile warnings when enable tiled backing store.
Attachments
patch (6.23 KB, patch)
2012-08-29 23:04 PDT, Kangil Han
no flags
Kangil Han
Comment 1 2012-08-29 23:04:48 PDT
Filip Pizlo
Comment 2 2012-08-29 23:20:18 PDT
This looks good, but lets wait and see if all of the build systems are happy.
Kangil Han
Comment 3 2012-08-29 23:22:25 PDT
(In reply to comment #2) > This looks good, but lets wait and see if all of the build systems are happy. Thanks, sure thing!
Kentaro Hara
Comment 4 2012-08-30 02:22:49 PDT
Comment on attachment 161405 [details] patch bots are green:)
WebKit Review Bot
Comment 5 2012-08-30 02:38:28 PDT
Comment on attachment 161405 [details] patch Clearing flags on attachment: 161405 Committed r127118: <http://trac.webkit.org/changeset/127118>
WebKit Review Bot
Comment 6 2012-08-30 02:38:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.